--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 
-    <title>Hello, world!</title>
-  </head>
+    <title>Hello, world!</title>  
+
+    </head>
   <body class="container">
-
-   <!-- Zip Code Submit -->
-   <div class="row">
-    <div class="col-7 ml-3">
-       <input class="form-control form-control-lg" type="text" placeholder="Enter Zip Code" id="zipCode">
-    </div>
-    <div class="col-4 mr-2 pl-1">
-       <button type="submit" class="btn btn-info btn-lg" id="submit">Submit</button>
-    </div>
- </div>
-
+   <!-- City Submit -->
+        <div class="mt-5 text-center">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col-6 text-center">
+              <input class="form-control" type="text" placeholder="Enter City..." id="city">
+            </div>
+            <div class="col"></div>
+          </div>
+          <button type="submit" class="btn btn-primary mt-3" id="submit">Submit</button>
+<!-- only visible to logged in users -->
+          <button type="submit" class="btn btn-primary mt-3" id="">Save Location</button>
+        </div>
 
     <!-- City -->
-    <div class="card w-75 text-center mx-auto m-3">
+    <div class="card w-75 text-center mx-auto m-3 mt-5">
         <h6 class="card-header">City</h6>
         <div class="card-body">
-        <h5 class="card-text" id="city"></h5>
+        <h5 class="card-text" id="cityCard"></h5>
         </div>
     </div>
 
@@ -50,5 +53,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+
+
+
   </body>
 </html>
